More api endpoints implemented

--- a/templates/spotify/main.html
+++ b/templates/spotify/main.html
@@ -9,6 +9,10 @@
       <a class="nav-link" href="{{url_for('spotify_top', spotify_type='artists')}}">Top Artists</a>
       <a class="nav-link" href="{{url_for('spotify_top', spotify_type='genres')}}">Top Genres</a>
       <a class="nav-link" href="{{url_for('spotify_recent')}}">Recent Tracks</a>
+      <a class="nav-link" href="{{url_for('spotify_playlists')}}">Playlists</a>
+      <a class="nav-link" href="{{url_for('spotify_albums')}}">Albums</a>
+      <a class="nav-link" href="{{url_for('spotify_following')}}">Followed Artists</a>
+      <!-- <a class="nav-link" href="{{url_for('spotify_friends')}}">Friends</a> -->
     </nav>
 </div>
 {% endblock %}
