--- a/templates/spotify/tables.html
+++ b/templates/spotify/tables.html
@@ -6,7 +6,7 @@
 
 {% block body %} 
 {{ super() }}
-<table class="table caption-top align-middle table-hover table-spacing">
+<table class="table table-responsive caption-top align-middle table-hover table-spacing">
     <div class="title text-center">
         <h1>
         {{caption[0]}}
