test media css for mobile

--- a/static/css/spotify/tables.css
+++ b/static/css/spotify/tables.css
@@ -99,3 +99,7 @@
     margin-left: auto;
     margin-right: auto;
   } */
+ 
+@media only screen and (max-width: 500px) {
+	.unseen {display: none;}
+}
