--- a/static/css/spotify/tables.css
+++ b/static/css/spotify/tables.css
@@ -1,8 +1,3 @@
-.cover {
-  width: 50px;
-  border: 2px solid #60778C;
-}
-
 .piechart {
   width: 200px;
   border: 2px solid #60778C;
@@ -70,6 +65,55 @@
   width: 560px;
   float: left;
 }
+
+.container {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  transition: .3s ease;
+  background-color: #00000000;
+}
+
+.cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  border: 2px solid #60778C;
+}
+
+.icon {
+  opacity: 0;
+  color: #dadada;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .overlay {
+  background-color: #00000080;
+}
+
+.container:hover .icon {
+  opacity: 1;
+}
+
  
 @media only screen and (max-width: 500px) {
 	.unseen {display: none;}
