--- a/templates/spotify/charts.html
+++ b/templates/spotify/charts.html
@@ -13,6 +13,8 @@
     </div>
 </div>
 
+<iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
 <div class="accordion" id="decades">
     {% for decade, tracks in decades.items() %}
     <div class="accordion-item">
