--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="ms-auto p-2 d-flex align-items-end select-box">
-            <select class="form-select form-select-sm">
+            <select class="form-select form-select-sm table-sort">
                 <option selected value="affinity">Sort by track affinity</option>
                 <option value="name">Sort by track name</option>
                 <option value="artist">Sort by artists</option>
