--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -1,33 +1,53 @@
-{% extends 'spotify/main.html' %}
-{% block head %}
-{{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tracks.css') }}" />
-{% endblock %}
-
-{% block body %} 
-{{ super() }}
+{% extends 'spotify/main.html' %} {% block head %} {{ super() }}
+<link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='css/spotify/tracks.css') }}"
+/>
+{% endblock %} {% block body %} {{ super() }}
 <div class="table-box bg-dark">
     <div class="header d-flex flex-wrap">
         <div class="p-2">
             <h3 class="table-name">{{caption}}</h3>
-            {% if top %}
+            {% if type == "top" %}
             <div class="time-select-buttons">
-                <a href="{{ request.path }}?time_range=short_term" class="link-secondary">Four Weeks</a>
-                <a href="{{ request.path }}?time_range=medium_term" class="link-secondary">Six Months</a>
-                <a href="{{ request.path }}?time_range=long_term" class="link-secondary">All Time</a>
+                <a
+                    href="{{ request.path }}?time_range=short_term"
+                    class="link-secondary"
+                    >Four Weeks</a
+                >
+                <a
+                    href="{{ request.path }}?time_range=medium_term"
+                    class="link-secondary"
+                    >Six Months</a
+                >
+                <a
+                    href="{{ request.path }}?time_range=long_term"
+                    class="link-secondary"
+                    >Few Years</a
+                >
             </div>
             {% endif %}
         </div>
         <div class="ms-auto p-2 d-flex align-items-end select-box">
             <select class="form-select form-select-sm table-sort">
-                <option selected value="affinity">Sort by track affinity</option>
+                <option selected value="affinity">
+                    Sort by track affinity
+                </option>
                 <option value="name">Sort by track name</option>
                 <option value="artist">Sort by artists</option>
                 <option value="album">Sort by album</option>
-                <option value="duration">Sort by track length (short to long)</option>
-                <option value="popularity">Sort by track popularity (least to most)</option>
-                <option value="tempo">Sort by track tempo (slowest to fastest)</option>
-                <option value="danceability">Sort by danceability (least to most)</option>
+                <option value="duration">
+                    Sort by track length (short to long)
+                </option>
+                <option value="popularity">
+                    Sort by track popularity (least to most)
+                </option>
+                <option value="tempo">
+                    Sort by track tempo (slowest to fastest)
+                </option>
+                <option value="danceability">
+                    Sort by danceability (least to most)
+                </option>
                 <option value="valence">Sort by mood (sad to happy)</option>
                 <option value="energy">Sort by energy (least to most)</option>
             </select>
@@ -44,44 +64,55 @@
             </tr>
         </thead>
         <tbody>
-            {% for track in data %}
-                <tr class="rows" data-track="{{track.json}}">
-                    <th scope="row">{{track.index}}</th>
-                    <td>
-                        <div class="container">
-                            <img class="cover" src="{{track.image}}">
-                            <div class="overlay">
-                                <span class="icon play-pause">
-                                    <i class="fa fa-play"></i>
-                                    <audio class="audio" src="{{track.preview}}"></audio>
-                                </span>
-                            </div>
+            {% for track in data.tracks %}
+            <tr class="rows" data-track="{{track.json}}">
+                <th scope="row">{{track.index}}</th>
+                <td>
+                    <div class="container">
+                        <img class="cover" src="{{track.image}}" />
+                        <div class="overlay">
+                            <span class="icon play-pause">
+                                <i class="fa fa-play"></i>
+                                <audio
+                                    class="audio"
+                                    src="{{track.preview}}"
+                                ></audio>
+                            </span>
                         </div>
-                    </td>
-                    <td>
-                        <a class="link-light" href="{{url_for('spotify_track', track_id=track.id)}}">{{track.name}}</a>
-                    </td>
-                    <td>
-                        {% for artist in track.artists %}
-                        <a class="link-light" href="{{url_for('spotify_artist', artist_id=artist['id'])}}">{{artist["name"]}}</a>
-                        {% endfor %}
-                    </td>
-                    <td class="unseen">{{track.duration}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="d-flex align-items-center justify-content-center">
-            {% if top %}
-            <a href="{{ url_for('create_playlist', spotify_type='top')}}?time_range={{request.args.get('time_range', 'short_term')}}" class="btn btn-primary playlist-button" role="button" aria-pressed="true">Create Playlist</a>
-            {% elif recent %}
-            <a href="{{ url_for('create_playlist', spotify_type='recent')}}" class="btn btn-primary playlist-button" role="button" aria-pressed="true">Create Playlist</a>
-            {% elif liked %}
-            <a href="{{ url_for('create_playlist', spotify_type='liked')}}" class="btn btn-primary playlist-button" role="button" aria-pressed="true">Create Playlist</a>
-            {% endif %}
-        </div>
-        <script src="{{ url_for('static', filename='js/spotify.js')}}" type="text/javascript"></script>
-        {% endblock %}
+                    </div>
+                </td>
+                <td>
+                    <button class="link-light track btn btn-link">
+                        {{track.name}}
+                    </button>
+                </td>
+                <td>
+                    {% for artist in track.artists %}
+                    <a
+                        class="link-light"
+                        href="{{url_for('spotify_artist', artist_id=artist['id'])}}"
+                        >{{artist["name"]}}</a
+                    >
+                    {% endfor %}
+                </td>
+                <td class="unseen">{{track.duration}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <div class="d-flex align-items-center justify-content-center">
+        <button
+            class="spinner-button btn btn-primary playlist-button"
+            role="button"
+            aria-pressed="true"
+            data-track_ids="{{data.track_ids}}"
+            data-type="{{type}}"
+        >
+            Create Playlist
+        </button>
     </div>
-        
-        
+    <script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
+    <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
+    <script src="{{url_for('static', filename='js/spotify/tracks.js')}}"></script>
+    {% endblock %}
+</div>
