--- a/static/css/spotify/tracks.css
+++ b/static/css/spotify/tracks.css
@@ -75,14 +75,9 @@
 }
 
 .cover {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 100%;
   width: 100%;
-  border: 2px solid #60778c;
+  border-radius: 2px;
 }
 
 .fa-play,
