--- a/templates/spotify/track.html
+++ b/templates/spotify/track.html
@@ -1,15 +1,17 @@
 {% extends 'spotify/main.html' %} {% block head %} {{ super() }} {% endblock %}
 {% block body %} {{ super() }}
 <script src="https://sdk.scdn.co/spotify-player.js"></script>
-<script src="{{url_for('static', filename='js/spoify/player.js')}}"></script>
+<script src="{{url_for('static', filename='js/spotify/player.js')}}"></script>
 <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
 <script src="{{url_for('static', filename='js/spotify/track.js')}}"></script>
 
-<body class="container">
-    <h1 class="text-salmon">Spotify Web Playback SDK</h1>
-
-    <img id="current-track" />
-    <h3 id="current-track-name"></h3>
-    <button type="button" class="btn btn-info play">Play</button>
-</body>
+<div class="card d-flex">
+    <div class="p-2">
+        <img src="{{track.image}}" class="cover">
+    </div>
+    <div class="p-2">
+        <a href="{{track['external_urls']['spotify'][0]}}">{{track.name}}</a>
+    </div>
+    <button onclick='play("{{track.uri}}")' class="btn btn-info play">Play</button>
+</div>
 {% endblock %}
