--- a/templates/index.html
+++ b/templates/index.html
@@ -49,14 +49,18 @@
       </div>
     </nav>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-    
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script
     src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
+
+    <!-- Spotify Music Players -->
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="{{url_for('static', filename='js/spotify/player.js')}}"></script>
+
+    <!-- Custom JS for this template -->
     <script rel='text/javascript' src="{{url_for('static', filename='js/index.js')}}"></script>    {% block body %}{% endblock %}
   </body>
 </html>
