--- a/templates/spotify/charts.html
+++ b/templates/spotify/charts.html
@@ -1,19 +1,18 @@
-{% extends 'spotify/main.html' %}
+{% extends 'spotify/tracks.html' %}
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tables.css') }}" />
-{% endblock %}
 
+<link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='css/spotify/chart.css') }}"
+/>
+{% endblock %}
 {% block body %} 
-{{ super() }}
 
 <div class="chart-container">
-    <div class="doughnut-chart-container">
-      <canvas id="chartcanvas"></canvas>
-    </div>
+    <canvas id="chartcanvas" data-labels="{{labels}}" data-colors="{{colors}}" data-decades="{{data}}"></canvas>
 </div>
 
-<iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 <div class="accordion" id="decades">
     {% for decade, tracks in decades.items() %}
@@ -25,66 +24,62 @@
       </h2>
       <div id="collapse{{decade}}" class="accordion-collapse collapse" aria-labelledby="heading{{decade}}" data-bs-parent="#decades">
         <div class="accordion-body">
-            <table class="table table-responsive caption-top align-middle table-hover table-spacing">
-              <tbody>
-                {% for track in tracks %}
-                <tr class="clickable-row" data-href="{{url_for('spotify_track', track_id=track.id)}}">
+          <table class="table align-middle bg-dark">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Cover</th>
+                    <th scope="col">Track</th>
+                    <th scope="col">Artist</th>
+                    <th class="unseen" scope="col">Duration</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for track in tracks["tracks"] %}
+                <tr class="rows" data-track="{{track.json}}">
                     <th scope="row">{{track.index}}</th>
-                    <td><img class="cover" src="{{track.image}}"></td>
-                    <td>{{track.name}}</td>
-                    <td>{{track.artist}}</td>
+                    <td>
+                        <div class="container">
+                            <div class="overlay">
+                                <img class="cover" src="{{track.image}}" />
+                                <span class="icon play-pause">
+                                    <i class="fa fa-play"></i>
+                                    <audio
+                                        class="audio"
+                                        src="{{track.preview}}"
+                                    ></audio>
+                                </span>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <a href="{{url_for('spotify_track', track_id=track.id)}}" class="link-light track">
+                            {{track.name}}
+                        </a>
+                    </td>
+                    <td>
+                        {% for artist in track.artists %}
+                        <a
+                            class="link-light"
+                            href="{{url_for('spotify_artist', artist_id=artist['id'])}}"
+                            >{{artist["name"]}}</a
+                        >
+                        {% endfor %}
+                    </td>
                     <td class="unseen">{{track.duration}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
-          </table>
+        </table>
         </div>
       </div>
     </div>
     {% endfor %}
-  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.0/Chart.min.js"></script>
-<script>
-    $(function(){
 
-    var ctx = $("#chartcanvas");
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.0/Chart.min.js"></script>
+    <script src="{{url_for('static', filename='js/spotify/chart.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
+    <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
+    <script src="{{url_for('static', filename='js/spotify/tracks.js')}}"></script>
 
-    var data = {
-    labels: {{ labels | safe }},
-    datasets: [
-        {
-            data: {{data | safe }},
-            backgroundColor: {{colors | safe}},
-        }
-    ]
-    };
-
-    var options = {
-        responsive: true,
-        tooltips: {
-          callbacks: {
-            label: function(tooltipItem, data) {
-              return data['labels'][tooltipItem['index']] + ': ' + data['datasets'][0]['data'][tooltipItem['index']] + '%';
-            }
-          }
-        },
-        legend: {
-            display: true,
-            position: "right",
-            align: "center",
-            labels: {
-                fontColor: "#333",
-                fontSize: 16
-            }
-        }
-    };
-
-    var chart = new Chart(ctx, {
-            type: "doughnut",
-            data: data,
-            options: options
-        });
-
-    });
-  </script>
-  {% endblock %}
+{% endblock %}
