--- a/static/css/spotify/chart.css
+++ b/static/css/spotify/chart.css
@@ -2,3 +2,9 @@
     width: 50%;
     margin: 50px auto;
 }
+
+@media only screen and (max-width: 630px) {
+    .chart-container {
+        width: 100%;
+    }
+}
