--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -4,7 +4,7 @@
     href="{{ url_for('static', filename='css/spotify/tracks.css') }}"
 />
 {% endblock %} {% block body %} {{ super() }}
-<div class="table-box bg-dark">
+<div class="table-box bg-dark table-responsive">
     <div class="header d-flex flex-wrap">
         <div class="p-2">
             <h3 class="table-name">{{caption}}</h3>
