--- a/templates/spotify/main.html
+++ b/templates/spotify/main.html
@@ -6,13 +6,13 @@
 <div class="nav-scroller bg-body shadow-sm">
     <nav class="nav justify-content-center nav-underline sub-nav" aria-label="Secondary navigation">
       <a class="nav-link" href="{{url_for('spotify_top', spotify_type='tracks')}}">Top Tracks</a>
-      <a class="nav-link" href="{{url_for('spotify_top', spotify_type='artists')}}">Top Artists</a>
-      <a class="nav-link" href="{{url_for('spotify_top', spotify_type='genres')}}">Top Genres</a>
+      <!-- <a class="nav-link" href="{{url_for('spotify_top', spotify_type='genres')}}">Top Genres</a> -->
       <a class="nav-link" href="{{url_for('spotify_liked')}}">Liked Tracks</a>
       <a class="nav-link" href="{{url_for('spotify_recent')}}">Recent Tracks</a>
-      <a class="nav-link" href="{{url_for('spotify_playlists')}}">Playlists</a>
-      <a class="nav-link" href="{{url_for('spotify_albums')}}">Albums</a>
+      <a class="nav-link" href="{{url_for('spotify_top', spotify_type='artists')}}">Top Artists</a>
       <a class="nav-link" href="{{url_for('spotify_following')}}">Followed Artists</a>
+      <a class="nav-link" href="{{url_for('spotify_albums')}}">Saved Albums</a>
+      <a class="nav-link" href="{{url_for('spotify_playlists')}}">Saved Playlists</a>
       <!-- <a class="nav-link" href="{{url_for('spotify_friends')}}">Friends</a> -->
     </nav>
 </div>
