--- a/static/css/spotify/tracks.css
+++ b/static/css/spotify/tracks.css
@@ -13,7 +13,10 @@
 }
 
 .play-pause {
-    display: block;
+    top:0;
+    left: 0;
+    display: inline-block;
+    position: absolute;
     height: 100%;
     width: 100%;
 }
