update id system to use spotify IDs

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 <h1>
 Yes, I know this website looks terrible. It'll improve. Hopefully...
 Oh and yes all the code is on github. Just google "sketyl github" or something like that.
-Professionalism is my forte and it shows. Doesn't it?
+Professionalism is my forte and it shows. Doesn't it? Sketyl is a cool name no? It's a random 6 letter word I came up with that happened to be for sale on namecheap for 4 bucks. Also cool because it sounds like skettle, which apparently is jamaican slang for prostitutes.
 Fuck I forgot to mention that a bunch of the tabs like recent tracks and playlists will probably crap out for you.
 Spotify hasn't approved Sketyl for that yet. Not my fault, so yeah my code isn't shitty just because you see internal server errors. Well the code is sorta shitty, but that's not why it craps out.
 Wuack is this dumbfuckery encouragement enough? When are you gonna make a homepage? :thinking:
