--- a/templates/spotify/charts.html
+++ b/templates/spotify/charts.html
@@ -60,7 +60,7 @@
                         </div>
                     </td>
                     <td>
-                        <a href="{{url_for('spotify_track', track_id=track.id)}}" class="link-light track">
+                        <a href="{{track.url}}" class="link-light track">
                             {{track.name}}
                         </a>
                     </td>
@@ -68,7 +68,7 @@
                         {% for artist in track.artists %}
                         <a
                             class="link-light"
-                            href="{{url_for('spotify_artist', artist_id=artist['id'])}}"
+                            href="{{artist.external_urls.spotify}}"
                             >{{artist["name"]}}</a
                         >
                         {% endfor %}
