--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -89,7 +89,7 @@
                     </div>
                 </td>
                 <td>
-                    <a href="{{url_for('spotify_track', track_id=track.id)}}" class="link-light track">
+                    <a href="{{track.url}}" class="link-light track">
                         {{track.name}}
                     </a>
                 </td>
@@ -97,7 +97,7 @@
                     {% for artist in track.artists %}
                     <a
                         class="link-light"
-                        href="{{url_for('spotify_artist', artist_id=artist['id'])}}"
+                        href="{{artist['external_urls']['spotify']}}"
                         >{{artist["name"]}}</a
                     >
                     {% endfor %}
